# simple-ai-bot

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/config/: key_vault.py  settings.py
apps/api/app/models/: domain.py
apps/api/app/schemas/: chat.py  session.py
apps/api/app/services/: azure_implementations.py  dependencies.py  interfaces.py  mock_implementations.py  prompt_builder.py
apps/web/: .env.example  index.html  package.json
apps/web/src/: App.tsx  index.css  vite-env.d.ts
apps/web/src/components/: ChatInput.tsx  ChatSidebar.tsx  ChatWindow.tsx  MessageBubble.tsx
apps/web/src/services/: api.ts
apps/web/src/types/: chat.ts
docs/: AZURE_GETTING_STARTED.md  AZURE_SETUP.md
