[project]
name = "ai_chatbot_api"
version = "0.1.0"
description = "AI chatbot backend with mock services and Azure-ready abstractions."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.113.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.1.1",
    "openai>=1.50.0",
    "azure-core>=1.30.0",
    "azure-identity>=1.17.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-search-documents>=11.5.0",
    "azure-cosmos>=4.7.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pydantic-settings]
name = "AppSettings"
